--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+flask/
+*.pyc
+dev
+api/apidata.db
+yarn.lock
+yarn-error.log
+*.psd
+env/
+env__/
+.vscode/symbols.json
+app/db.sqlite3
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -127,3 +139,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
