Modify boiler plate

--- a/example.env
+++ b/example.env
@@ -1,7 +1,11 @@
-DB_NAME='<db_name>'
-TEST_DB_NAME='<test_db_name>'
-DB_USER='<db_user>'
-DB_PASSWORD='qwqeqww'
+DB_NAME='gomerce'
+TEST_DB_NAME='gomerce-test'
+DB_USER='postgres'
+DB_PASSWORD=''
 DB_PORT=5432
 DB_HOST='localhost'
-DEBUG=True
+ENVIRONEMENT='DEV'
+APPLICATION_PORT=3303
+APPLICATION_HOST='0.0.0.0'
+SERVICE_LOG='logs'
+API_APPLICATION_ROOT='/api'
